--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -87,7 +87,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\"\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.Photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"VXL1.0\"]\n",
+        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.Photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"VXL1.0\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -101,7 +101,7 @@
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = True\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
