--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -281,8 +281,8 @@
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=pruned&fp=fp16\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o realisticVisionv40VAE.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"VXL1.0\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/ckpt/sd_xl_base_1.0/resolve/main/sd_xl_base_1.0.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0.safetensors $url)\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/ckpt/sd_xl_refiner_1.0/resolve/main/sd_xl_refiner_1.0.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0.safetensors $url)\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
@@ -376,6 +376,7 @@
         "        #!gdown https://acortar.link/US0GK0 -O qrcode_gen.zip && unzip -n qrcode_gen.zip && rm qrcode_gen.zip\n",
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
+        "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
