--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -377,6 +377,7 @@
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
+        "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
