--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -327,7 +327,7 @@
         "        !gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        #!gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
-        "        !gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
+        "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
         "        #!gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
         "        #!gdown https://acortar.link/glUPMq -O canvas-editor.zip && unzip -n canvas-editor.zip && rm canvas-editor.zip\n",
