--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -87,7 +87,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\"\n",
-        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.ReVAnimated\", \"V1.5.DreamShaper\", \"V1.5.Photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"VXL1.0\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.ReVAnimated\", \"V1.5.DreamShaper\", \"V1.5.Photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"VXL1.0\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -238,6 +238,7 @@
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
         "\n",
+        "  #!pip install openmim\n",
         "  #!pip install svglib\n",
         "  #!sudo apt-get install libcairo2-dev\n",
         "  #!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
