--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -103,6 +103,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
+        "sdxl_patch = True\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
         "\n",
@@ -448,6 +449,10 @@
         "  else:\n",
         "    SDZ_Training == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "  if sdxl_patch:\n",
+        "    !sed -i -e '''/from modules import launch_utils/a\\import os''' /content/SDZ/launch.py\n",
+        "    !sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/sdw/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/SDZ/launch.py\n",
         "\n",
         "  if SDZ_Big_Models:\n",
         "    #!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' $SDZ_webui_path'/modules/shared.py'\n",
