--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -110,6 +110,7 @@
         "\n",
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
         "\n",
+        "patches_dir = \"/content/patches/\"\n",
         "merge_in_vram = False\n",
         "load_in_vram = False\n",
         "ram_patch_for_sd2 = False\n",
@@ -135,21 +136,8 @@
         "  # ------------------------------------ Feel free to remove! Don't forget to read notes above ✌️\n",
         "\n",
         "  with capture.capture_output() as cap:\n",
-        "    # !rm -rf /usr/local/lib/python3.10/dist-packages/scipy /usr/local/lib/python3.10/dist-packages/scipy-*.dist-info/ /usr/local/lib/python3.10/dist-packages/scipy.libs\n",
-        "    !apt install -qq libunwind8-dev\n",
+        "\n",
         "    !wget https://huggingface.co/NoCrypt/fast-repo/resolve/main/ubuntu_deps.zip ; unzip ubuntu_deps.zip -d ./deps ; dpkg -i ./deps/* ; rm -rf ubuntu_deps.zip /content/deps/\n",
-        "    # !apt install liblz4-tool aria2\n",
-        "    # !pip uninstall -q -y huggingface_hub\n",
-        "    # !{'curl -LO https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb && dpkg -i ripgrep_13.0.0_amd64.deb && rm -rf ripgrep_13.0.0_amd64.deb'}\n",
-        "\n",
-        "    # !aria2c --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content -Z \\\n",
-        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4 \\\n",
-        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4 \\\n",
-        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
-        "\n",
-        "    # !aria2c -d /content -o dep.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\n",
-        "    # !aria2c -d /content -o repo.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\n",
-        "    # !aria2c -d /content -o cache.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
         "\n",
         "    !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
         "      | aria2c -i- -j5 -x16 -s16 -k1M -c\n",
@@ -164,38 +152,39 @@
         "    os.environ[\"colab_url\"] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "    os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
         "    os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
-        "    # os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
-        "    # !apt -y update -qq\n",
+        "    # %env PYTHONDONTWRITEBYTECODE=1\n",
+        "    os.environ[\"TCMALLOC_AGGRESSIVE_DECOMMIT\"] = \"t\"\n",
         "\n",
-        "    %env LD_PRELOAD=libtcmalloc.so\n",
+        "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4 -c\n",
+        "    %env LD_PRELOAD=/content/libtcmalloc_minimal.so.4\n",
         "    del cap\n",
-        "  if not os.path.exists(hypernetworks_dir):\n",
-        "    os.makedirs(hypernetworks_dir)\n",
-        "  # if not 'T4' in gpu_name:  # [For colab makers out there, facebook's xformers pypi already support almost all gpu now]\n",
-        "  #   !pip uninstall -y xformers\n",
+        "\n",
         "  install_time = timedelta(seconds=time.time()-start_install)\n",
         "  time_since_start = timedelta(seconds=time.time()-start_colab)\n",
         "  clear_output()\n",
         "print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
         "# Colab patches for quality of life improvements\n",
+        "os.makedirs(patches_dir, exist_ok=True)\n",
         "with capture.capture_output() as cap:\n",
-        "  # RAM Patch Code by ddPn08: https://github.com/ddPn08/automatic1111-colab/commit/81431d6bd66f0ef96fe638c2743623522e1bc797\n",
-        "  !wget https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch -P {patches_dir}  -c\n",
-        "  !wget https://gist.githubusercontent.com/neggles/75eaacb3f49c209636be61fa96ca95ca/raw/1bcef23f31febf9a4e613f7dace658318f79719e/01-add-DPMPP-2M-V2.patch -P {patches_dir}  -c\n",
+        "\n",
+        " # RAM Patch Code by ddPn08: https://github.com/ddPn08/automatic1111-colab/commit/81431d6bd66f0ef96fe638c2743623522e1bc797\n",
+        "  !wget https://gist.github.com/NoCrypt/6e7331eda3d670c2156852ae5e300a42/raw/e52dac97fcabcb054b5737e0c5188cbc600c6582/DPMPP_2M_V2.patch -P {patches_dir}  -c\n",
+        "  !wget https://gist.github.com/NoCrypt/6e7331eda3d670c2156852ae5e300a42/raw/e52dac97fcabcb054b5737e0c5188cbc600c6582/idgaf_about_git_ext.patch -P {patches_dir}  -c\n",
+        "  !wget https://gist.github.com/NoCrypt/6e7331eda3d670c2156852ae5e300a42/raw/e52dac97fcabcb054b5737e0c5188cbc600c6582/sd-lowram.patch -P {patches_dir}  -c\n",
         "  if ram_patch_for_sd2:\n",
-        "    !cd /content/SDZ/repositories/stable-diffusion-stability-ai && git apply {patches_dir}/stablediffusion-lowram.patch\n",
+        "    !cd /content/SDZ/ && git apply --ignore-whitespace {patches_dir}/sd-lowram.patch\n",
         "  else:\n",
-        "    !cd /content/SDZ/repositories/stable-diffusion-stability-ai && git apply -R {patches_dir}/stablediffusion-lowram.patch\n",
+        "    !cd /content/SDZ/ && git apply --ignore-whitespace -R {patches_dir}/sd-lowram.patch\n",
+        "\n",
         "\n",
         "  if dpmpp_v2:\n",
-        "    !cd /content/SDZ/ && git apply --whitespace=fix {patches_dir}/01-add-DPMPP-2M-V2.patch\n",
+        "    !cd /content/SDZ/ && git apply --ignore-whitespace {patches_dir}/DPMPP_2M_V2.patch\n",
         "  else:\n",
-        "    !cd /content/SDZ/ && git apply --whitespace=fix -R {patches_dir}/01-add-DPMPP-2M-V2.patch\n",
+        "    !cd /content/SDZ/ && git apply --ignore-whitespace -R {patches_dir}/DPMPP_2M_V2.patch\n",
         "\n",
-        "  # Colab Optimizations modified to load_in_vram\n",
-        "  if load_in_vram:\n",
-        "    commandline_arguments += ' --lowram '\n",
+        "  # IGAF, get lost git ext checker thingy\n",
+        "  !cd /content/SDZ/ && git apply --ignore-whitespace {patches_dir}/idgaf_about_git_ext.patch\n",
         "\n",
         "  # Merge in vram: self-explainotory\n",
         "  if merge_in_vram:\n",
@@ -239,6 +228,7 @@
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
         "\n",
+        "  !apt --fix-broken install\n",
         "  #!pip install openmim\n",
         "  #!pip install svglib\n",
         "  #!sudo apt-get install libcairo2-dev\n",
@@ -248,7 +238,8 @@
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
-        "  %cd models/Stable-diffusion\n",
+        "  %cd /content/SDZ/models/Stable-diffusion\n",
+        "\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
         "\n",
@@ -297,26 +288,29 @@
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd models/VAE\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
-        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/sdxl_vae/resolve/main/sdxl_vae.safetensors -o sdxl_vae.vae.safetensors\n",
+        "    if not os.path.exists('vae-ft-mse-840000-ema-pruned.ckpt'):\n",
+        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
+        "      !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/sdxl_vae/resolve/main/sdxl_vae.safetensors -o sdxl_vae.vae.safetensors\n",
         "    %cd ..\n",
         "\n",
         "    if not os.path.exists('Lora'):\n",
         "        os.makedirs('Lora')\n",
         "    %cd Lora\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/63006 -O LowRA.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/117467 -O polyhedron_skinny_all.pt\n",
-        "    !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
-        "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
+        "    if not os.path.exists('epiNoiseoffset_v2.safetensors'):\n",
+        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
+        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
+        "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
+        "      !wget --timestamping https://civitai.com/api/download/models/63006 -O LowRA.safetensors\n",
+        "      !wget --timestamping https://civitai.com/api/download/models/117467 -O polyhedron_skinny_all.pt\n",
+        "      !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
+        "      #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
+        "      !wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
+        "    if not os.path.exists('bad-hands-5.pt'):\n",
+        "        !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
+        "        !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
@@ -382,7 +376,7 @@
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
-        "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
+        "        !gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
@@ -452,7 +446,7 @@
         "\n",
         "  if sdxl_patch:\n",
         "    !sed -i -e '''/from modules import launch_utils/a\\import os''' /content/SDZ/launch.py\n",
-        "    !sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/sdw/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/SDZ/launch.py\n",
+        "    !sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/SDZ/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/SDZ/launch.py\n",
         "\n",
         "  if SDZ_Big_Models:\n",
         "    #!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' $SDZ_webui_path'/modules/shared.py'\n",
